some changes made in style, bugs fixed

--- a/src/main/resources/templates/user/orderDetails.html
+++ b/src/main/resources/templates/user/orderDetails.html
@@ -49,7 +49,7 @@
         }
 
         .order-products-table th {
-            background-color: #f2f2f2;
+            background-color: #ffc107;
             font-size: 18px;
         }
 
@@ -68,7 +68,7 @@
         }
 
         .back-button {
-            background-color: #28a745;
+            background-color: black;
             border: none;
             border-radius: 20px;
             padding: 10px 20px;
@@ -82,7 +82,7 @@
         }
 
         .back-button:hover {
-            background-color: #218838;
+            background-color: #ffc107;
             transform: scale(1.05);
         }
 
