--- a/src/main/resources/templates/user/orders.html
+++ b/src/main/resources/templates/user/orders.html
@@ -49,7 +49,7 @@
         }
 
         .info-button, .back-button {
-            background-color: #007bff;
+            background-color: #ffc107;
             border: none;
             border-radius: 20px;
             padding: 10px 20px;
@@ -62,7 +62,7 @@
         }
 
         .info-button:hover, .back-button:hover {
-            background-color: #0056b3;
+            background-color: #ffc107;
             transform: scale(1.05);
         }
 
