product removal added

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -91,13 +91,12 @@
         <label>
             <input type="password" name="password" placeholder="Enter your password" required>
         </label>
-        <input type="submit" class="login-button" placeholder="Log In">
+        <input type="submit" class="login-button" placeholder="Log In" value="Login">
     </form>
     <div class="fine-print">
         <p>Do you want to cancel login? <a href="/">Click here</a></p>
         <p>Don't have an account? <a href="/register">Sign up now!</a></p>
     </div>
 </div>
-</body>
 </body>
 </html>
